<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/detail_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:paddingLeft="32dp"
            android:paddingTop="@dimen/padding_38"
            android:paddingBottom="@dimen/padding_38"
            android:textColor="@color/colourTextWhite"
            android:textSize="@dimen/movie_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/detail_name_placeholder" />

        <ImageView
            android:id="@+id/detail_thumbnail_iv"
            android:layout_width="130dp"
            android:layout_height="195dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/movie_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_title_tv" />

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/detail_thumbnail_iv"
            app:layout_constraintTop_toBottomOf="@+id/detail_title_tv">

            <TextView
                android:id="@+id/detail_release_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_4"
                android:layout_marginLeft="@dimen/spacing_4"
                android:layout_marginBottom="6dp"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="@string/detail_release_placeholder" />

            <TextView
                android:id="@+id/detail_rating_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_4"
                android:layout_marginLeft="@dimen/spacing_4"
                android:textColor="@color/colorPrimaryDark"
                tools:text="@string/detail_rating_placeholder" />

            <ToggleButton
                android:id="@+id/favourite_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/baseline_star_outline_24"
                android:checked="false"
                android:textOff=""
                android:textOn="" />
        </LinearLayout>

        <TextView
            android:id="@+id/detail_overview_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:padding="@dimen/spacing_16"
            app:layout_constraintTop_toBottomOf="@+id/detail_title_tv"
            tools:text="@string/detail_overview_placeholder" />

        <View
            android:id="@+id/trailer_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_overview_tv" />

        <TextView
            android:id="@+id/trailer_header_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:layout_marginLeft="@dimen/spacing_16"
            android:text="@string/trailers"
            android:textSize="@dimen/trailer_header_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trailer_divider" />

        <androidx.recyclerview.widget.RecyclerView
            android:maxHeight="@dimen/detail_rv_max_height"
            android:id="@+id/trailer_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@+id/trailer_header_tv" />

        <View
            android:id="@+id/review_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trailer_rv" />

        <TextView
            android:id="@+id/review_header_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:layout_marginLeft="@dimen/spacing_16"
            android:text="@string/reviews_header"
            android:textSize="@dimen/trailer_header_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_divider" />

        <androidx.recyclerview.widget.RecyclerView
            android:maxHeight="@dimen/detail_rv_max_height"
            android:id="@+id/review_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@+id/review_header_tv" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>